Additional feature for Dynamic locator Based registration
Signed-off-by: Ajeet Jha <ajeetjha1@gmail.com>

--- a/server/templates/list_requests.html
+++ b/server/templates/list_requests.html
@@ -5,7 +5,7 @@
 
         <form action="/list_handler" method= "get">
             <p> Please provide the following details</p>
-            <p> Your user-name<input type="text" name="user" placeholder="UserName"></p>
+            <!-- <p> Your user-name<input type="text" name="user" placeholder="UserName"></p> -->
             <input type="submit" value="List Requests">
         </form>
 
