--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -5,7 +5,7 @@
 
     <body>
         <form action="/doreg" method="get">
-            <input type="text" name="user" placeholder="Username"></br>
+            <!--<input type="text" name="user" placeholder="Username"></br> -->
             <input type="email" name="email" placeholder="Email-ID"></br>
             <input type="text" name="phone" placeholder="Phone"></br>
             <input type="text" name="msg" placeholder="Diplay Message"></br>
