--- a/server/templates/search.html
+++ b/server/templates/search.html
@@ -5,7 +5,7 @@
 
     <body>
         <form action="/search" method="get">
-            <input type="text" name="user" placeholder="search(user)"></br>
+            <!-- <input type="text" name="user" placeholder="search(user)"></br> -->
             <input type="submit" value="Search">
         </form>
     </body>
