--- a/server/templates/request_access.html
+++ b/server/templates/request_access.html
@@ -5,7 +5,7 @@
 
         <form action="/re_handler" method= "get">
             <p> Please provide the following details</p>
-            <p> Your user-name<input type="text" name="fuser" placeholder="From-User"></p>
+            <!-- <p> Your user-name<input type="text" name="fuser" placeholder="From-User"></p> -->
             <p> Username of other person <input type="text" name="tuser" placeholder="To-User"> </p>
             <input type="checkbox" name="phone" value="T">Request for Phone Access<br>
             <p>Message for permission<input type="text" name="msg" placeholder="Message"></p>
